- Added Monitored item view - Reviewed attributes

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Sign In</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -34,8 +34,5 @@
     </ion-grid>
     <button ion-button type='submit' [disabled]='!authForm.valid'>Sign In</button>
   </form>
-  <button ion-button color='secondary'
-    (click)='register()' >
-    Register
-  </button>
+  <button ion-button color='secondary' (click)='register()' > Register </button>
 </ion-content>
