- Added icons - Clean up - Pages unsubscribiing

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2D_U3ekOPx7xuktymnpR33iMX3xlFBj8"></script>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
