--- a/src/pages/monitored-items/monitored-items.html
+++ b/src/pages/monitored-items/monitored-items.html
@@ -13,4 +13,5 @@
   <monitored-item-segment [label]='"Shore Power"' [item]='boat.shorepower' [itemName]='"shorepower"'></monitored-item-segment>
   <monitored-item-segment [label]='"Geo Position"' [item]='boat.geomonitoring' [itemName]='"geomonitoring"'></monitored-item-segment>
   <monitored-item-segment [label]='"Vibration"' [item]='boat.vbatmonitoring' [itemName]='"vbatmonitoring"'></monitored-item-segment>
+  <monitored-item-segment [label]='"Security"' [item]='boat.antitheftloopalarm' [itemName]='"antitheftloopalarm"'></monitored-item-segment>
 </ion-content>
